feat: Implement Android backend components and runtime
- Added TextFieldComponent for rendering text input fields with reactive bindings.
- Introduced ToggleComponent for switch-like toggle functionality with state management.
- Created RustLayout for integrating Rust layout engine with Compose.
- Developed Watcher for managing reactive state updates and lifecycle.
- Implemented WuiBinding for generic reactive bindings with various data types.
- Added WuiComputed for read-only reactive wrappers mirroring WaterUI computed signals.
- Established NativeBindings for centralized access to native WaterUI functions.
- Introduced NativePointer for managing native pointers and resource cleanup.
- Created RenderRegistry for managing view type registrations and rendering.
- Developed WaterUIApplication as the entry point for the Compose application.
- Implemented WuiAnyView for rendering native views in Compose.
- Established WuiEnvironment for managing the lifecycle of the native environment.
- Added WuiTypeId for representing type identifiers in Kotlin.
- Configured Gradle properties and wrapper for project setup.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,14 @@
 *.pdb
 /demo/apple/demo.xcodeproj/project.xcworkspace/xcuserdata/*
 all.rs.txt
+.jdks/
+
+# Gradle / Android build artefacts
+/.gradle/
+/.idea/
+/build/
+/*/build/
+/backends/android/.gradle/
+/backends/android/build/
+/backends/android/.cxx/
+local.properties
