feat: Implement WaterUI Doctor for environment checks and add new dependencies

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -14,12 +14,16 @@ categories.workspace = true
 [dependencies]
 anyhow = "1.0.93"
 clap = { version = "4.5.47", features = ["derive"] }
+console = "0.15.8"
 ctrlc = "3.4.4"
 dialoguer = "0.11.0"
+include_dir = "0.7.3"
+indicatif = "0.17.8"
 notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
 serde = { version = "1.0.217", features = ["derive"] }
 toml = "0.8.19"
 walkdir = "2.5.0"
+which = "6.0.2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 which = "6.0.2"
