--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -17,13 +17,20 @@ clap = { version = "4.5.47", features = ["derive"] }
 console = "0.15.8"
 ctrlc = "3.4.4"
 dialoguer = "0.11.0"
+heck = "0.5.0"
+home = "0.5.9"
 include_dir = "0.7.3"
 indicatif = "0.17.8"
 notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
 serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.132"
 toml = "0.8.19"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
 walkdir = "2.5.0"
 which = "6.0.2"
+crates-index = "0.19.1"
+semver = "1.0.22"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 which = "6.0.2"
