--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -31,6 +31,7 @@ walkdir = "2.5.0"
 which = "6.0.2"
 crates-index = "0.19.1"
 semver = "1.0.22"
+webbrowser = "0.8.15"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 which = "6.0.2"
