--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,6 +89,7 @@ waterui-form.workspace = true
 executor-core.workspace = true
 serde = { workspace = true, features = ["derive"], optional = true }
 log.workspace = true
+pulldown-cmark = "0.9"
 
 [features]
 default = []
