--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,6 +94,9 @@ jobs:
       - name: Run tests
         run: cargo test --all-features --workspace
 
+      - name: Build documentation
+        run: cargo doc --all-features --no-deps --workspace
+
       - name: Publish to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CRATES_IO_TOKEN }}
