--- a/components/graphics/Cargo.toml
+++ b/components/graphics/Cargo.toml
@@ -7,16 +7,19 @@ license.workspace = true
 readme.workspace = true
 repository.workspace = true
 description = "Graphic components for WaterUI"
-keywords = ["graphics", "2d", "vello", "ui", "waterui"]
+keywords = ["graphics", "2d", "ui", "waterui"]
 categories = ["gui"]
 
+[features]
+default = []
+wgpu = ["dep:wgpu"]
 
 [dependencies]
 waterui-core.workspace = true
 waterui-color.workspace = true
-vello = { version = "0.1.0", features = ["wgpu"] }
 kurbo = "0.11.0"
-wgpu.workspace = true
+tiny-skia = "0.11.4"
+wgpu = { workspace = true, optional = true }
 
 [lints]
 workspace = true
