--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
+---
 name: CI
 
-on:
+'on':
   push:
     branches: [main]
   pull_request:
@@ -10,8 +11,8 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  test:
-    name: Test
+  rust-checks:
+    name: Rust checks
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -37,16 +38,14 @@ jobs:
         run: cargo fmt --all -- --check
 
       - name: Run clippy
-        run: cargo clippy --all-targets --all-features --workspace -- -D warnings
-
-      - name: Run tests
-        run: cargo test --all-features --workspace
-
-      - name: Check documentation
-        run: cargo doc --all-features --no-deps --workspace
-
-      - name: Check that packages can be built
         run: |
-          cargo package -p waterui --allow-dirty
-          cargo package -p waterui-core --allow-dirty
-          cargo package -p waterui-cli --allow-dirty
+          cargo clippy --all-targets --all-features --workspace -- -D warnings
+
+  swift-backend:
+    name: Build Swift backend
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build Swift package
+        run: swift build --package-path backends/swift --configuration release
