--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -12,7 +12,6 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
-anyhow = "1.0.93"
 clap = { version = "4.5.47", features = ["derive"] }
 console = "0.15.8"
 ctrlc = "3.4.4"
@@ -32,6 +31,7 @@ which = "6.0.2"
 crates-index = "0.19.1"
 semver = "1.0.22"
 webbrowser = "0.8.15"
+color-eyre = { version = "0.6.5", features = ["issue-url"] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 which = "6.0.2"
