fix: Update CI configuration to use macos-26-arm64 for Swift backend build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
 
   swift-backend:
     name: Build Swift backend
-    runs-on: macos-latest
+    runs-on: macos-26-arm64
     steps:
       - uses: actions/checkout@v4
 
