Remove example files for FormBuilder and #[form] macro
- Deleted `derive_test.rs` and `form_macro_test.rs` examples as they are no longer needed.
- Updated `lib.rs` to remove inline documentation for `FormBuilder` and `form`.
- Refactored `FormBuilder` trait implementation to streamline form generation.
- Added new procedural macro crate `waterui-derive` for deriving `FormBuilder` and `Project` traits.
- Implemented `#[form]` attribute macro to automatically derive common traits for structs.
- Enhanced `Project` trait implementation for reactive state management in forms.
- Updated various components in the graphics module to improve performance and clarity.
- Adjusted dependencies in `Cargo.toml` files to reflect workspace structure changes.

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -63,11 +63,29 @@ jobs:
           else
             V="main"
           fi
+          # 🔁 If your crate directory isn't 'waterui', change it here:
           if [[ ! -f "deploy/$V/waterui/index.html" ]]; then
             echo "::error::Expected deploy/$V/waterui/index.html but not found."
             echo "deploy/$V contents:"; ls -la "deploy/$V" || true
             exit 1
           fi
+
+      # ✅ NEW: ensure /$VERSION/ resolves (single absolute redirect, no loops)
+      - name: Write version index (/$VERSION → /$VERSION/waterui/)
+        run: |
+          set -euxo pipefail
+          if [[ "${GITHUB_REF_TYPE}" == "tag" ]]; then
+            V="${GITHUB_REF_NAME}"
+          else
+            V="main"
+          fi
+          mkdir -p "deploy/$V"
+          # 🔁 If your crate directory isn't 'waterui', change it here too:
+          cat > "deploy/$V/index.html" <<EOF
+          <!DOCTYPE html>
+          <meta http-equiv="refresh" content="0; url=/$V/waterui/">
+          <script>location.replace("/$V/waterui/");</script>
+          EOF
 
       - name: Determine latest stable tag
         id: stable
