--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
       - uses: dtolnay/rust-toolchain@nightly
         with:
           components: rustfmt, clippy
@@ -53,6 +55,8 @@ jobs:
         os: [ubuntu-latest, macos-14, windows-latest]
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
       - uses: dtolnay/rust-toolchain@nightly
       - name: Cache cargo
         uses: actions/cache@v4
@@ -71,6 +75,10 @@ jobs:
     runs-on: macos-14
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
+        with:
+          submodules: 'recursive'
       - name: Cache Swift build
         uses: actions/cache@v4
         with:
