--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,17 +4,17 @@ on:
   push:
     branches: [main]
     paths-ignore:
-      - '**/*.md'
-      - '**/*.png'
-      - '**/*.jpg'
-      - ' tutorial-book/**'
+      - "**/*.md"
+      - "**/*.png"
+      - "**/*.jpg"
+      - " tutorial-book/**"
   pull_request:
     branches: [main]
     paths-ignore:
-      - '**/*.md'
-      - '**/*.png'
-      - '**/*.jpg'
-      - ' tutorial-book/**'
+      - "**/*.md"
+      - "**/*.png"
+      - "**/*.jpg"
+      - " tutorial-book/**"
 env:
   CARGO_TERM_COLOR: always
 
@@ -25,7 +25,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: 'recursive'
+          submodules: "recursive"
       - uses: dtolnay/rust-toolchain@nightly
         with:
           components: rustfmt, clippy
@@ -56,7 +56,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: 'recursive'
+          submodules: "recursive"
       - uses: dtolnay/rust-toolchain@nightly
       - name: Cache cargo
         uses: actions/cache@v4
@@ -76,9 +76,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: 'recursive'
-        with:
-          submodules: 'recursive'
+          submodules: "recursive"
       - name: Cache Swift build
         uses: actions/cache@v4
         with:
