--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -32,6 +32,10 @@ crates-index = "0.19.1"
 semver = "1.0.22"
 webbrowser = "0.8.15"
 color-eyre = { version = "0.6.5", features = ["issue-url"] }
+tokio = { version = "1.41.1", features = ["rt", "net", "sync", "macros"] }
+hyper = { version = "1.4.1", features = ["http1", "server"] }
+hyper-util = { version = "0.1.5", features = ["server", "tokio"] }
+hyper-staticfile = "0.10.0"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 which = "6.0.2"
