--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -36,6 +36,7 @@ tokio = { version = "1.41.1", features = ["rt", "net", "sync", "macros"] }
 hyper = { version = "1.4.1", features = ["http1", "server"] }
 hyper-util = { version = "0.1.5", features = ["server", "tokio"] }
 hyper-staticfile = "0.10.0"
+indexmap = "2.6.0"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 which = "8.0.0"
