feat: Enhance Android and watchOS support with new SDK checks and build scripts

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /*/Cargo.lock
 /backends/swift/build
 /.build
-
+/water-demo
 # Tutorial book build output
 /tutorial-book/book/
 /tutorial-book/target/
