--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -34,3 +34,6 @@ required-features = ["cbindgen"]
 
 [features]
 default = []
+
+[target.'cfg(target_os = "android")'.dependencies]
+jni = { version = "0.21" }
