--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,10 +60,11 @@ jobs:
   release-rust:
     name: Release Rust crate
     needs: determine-product
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: 'recursive'
+          submodules: "recursive"
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
@@ -117,7 +118,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: 'recursive'
+          submodules: "recursive"
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
@@ -168,7 +169,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: 'recursive'
+          submodules: "recursive"
 
       - name: Build Swift backend
         run: swift build --package-path backends/swift --configuration release
@@ -191,13 +192,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: 'recursive'
+          submodules: "recursive"
 
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: '17'
+          java-version: "17"
 
       - name: Cache Gradle packages
         uses: actions/cache@v4
